[package]
name = "msbt"
version = "0.1.0"
authors = ["Kyle Clemens <git@kyleclemens.com>"]
edition = "2018"

[dependencies]
byteordered = "0.4"
failure = "0.1"
failure_derive = "0.1"
serde = { version = "1", optional = true }
serde_derive = { version = "1", optional = true }

[features]
serde_support = ["serde", "serde_derive"]

[[bin]]
name = "read_write"
path = "bin/read_write.rs"
